Allow writing json to kafka
Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>